# MiCompositionScale2

./: .env.dist  .gitignore  Cargo.toml  README.md  composition-scale-2.service  fitbitData.py  logger.py  main.py  makefile  scaleMetrics.py  scanner.py  utils.py  variables-template.json
src/: auth.rs  bluetooth.rs  data_types.rs  fitbit_data.rs  main.rs  scale_metrics.rs  utils.rs
