[package]
name = "MiCompositionScale2"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
btleplug = { version = "0.11.5", features = ["serde"] }
bytes = "1.7.1"
chrono = "0.4.38"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures = "0.3.30"
jsonwebtokens = "1.2.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = "1.0.209"
serde_json = "1.0.127"
tokio = {version = "1.39.3", features = ["full"]}

