[package]
name = "MiCompositionScale2"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
btleplug = { version = "0.11.5", features = ["serde"] }
bytes = "1.7.1"
chrono = "0.4.38"
env_logger = "0.11.5"
futures = "0.3.30"
jsonwebtokens = "1.2.0"
log = "0.4.22"
oauth2 = "4.4.2"
opener = "0.7.2"
reqwest = "0.12.7"
serde = "1.0.209"
serde_json = "1.0.127"
tokio = {version = "1.39.3", features = ["full"]}
uuid = "1.10.0"

